[gd_scene load_steps=2 format=3 uid="uid://b0q80qar3n8ho"]

[ext_resource type="Script" path="res://tools/unit_type_panel.gd" id="1_f3lvu"]

[node name="UnitTypePanel" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 369.0
offset_bottom = 299.0
script = ExtResource("1_f3lvu")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172549, 0.172549, 0.172549, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 8.0
offset_right = 83.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "MaxHP"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "HP"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "DMG
"

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "RNG
"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 8.0
offset_right = 110.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "5"

[node name="Label2" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "3"

[node name="Label3" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "2"

[node name="Label4" type="Label" parent="VBoxContainer2"]
layout_mode = 2
text = "1"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 8.0
offset_right = 137.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="VBoxContainer3"]
layout_mode = 2
text = "1"

[node name="Label2" type="Label" parent="VBoxContainer3"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer3"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer3"]
layout_mode = 2

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 8.0
offset_right = 164.0
offset_bottom = 112.0

[node name="Label" type="Label" parent="VBoxContainer4"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer4"]
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer4"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer4"]
layout_mode = 2
text = "1"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 129.0
offset_right = 91.0
offset_bottom = 152.0
text = "Alara Basic"

[node name="Label3" type="TextEdit" parent="Label"]
layout_mode = 0
offset_left = 9.0
offset_top = 23.0
offset_right = 356.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 14
text = "Alara Basic"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 210.0
offset_right = 91.0
offset_bottom = 233.0
text = "Alara Basic"

[node name="Label3" type="TextEdit" parent="Label2"]
layout_mode = 0
offset_left = 9.0
offset_top = 23.0
offset_right = 356.0
offset_bottom = 81.0
theme_override_font_sizes/font_size = 14
text = "Alara Basic"
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1

